# tm-blog-dj

./: .gitignore  Pipfile  README.rst  requirements.txt  setup.cfg
articles/: views.py
articles/templates/articles/: article_form.html  base.html  detail.html
config/: settings.py  urls.py
