[metadata]
name = tm-blog-dj
version = 0.1
description = A Django app to create and manage articles.
long_description = file: README.rst
url = https://www.tareqmonwer.com/tm-blog-dj/
author = Tareq Monwer
author_email = tareqmonwer137@gmail.com
license = BSD-3-Clausee
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find: